Menambahkan nama Tim

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,14 @@
     <h1>Kulkas Samsung Family HubTM</h1>
   </section>
 
+<section>
+    <h2>Nama Anggota Kelompok</h2>
+    <li>Victor Purba</li>
+    <li>Daniel Indra Octo Pardomuan</li>
+    <li>Pandu Lesmana</li>
+    <li>Sebastian Sembiring</li>
+  </section>
+
   <section>
     <h2>Images</h2>
     <img src="images/bespoke-logo.jpg">
