menambahkan nim anggota

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,10 @@
 
 <section>
     <h2>Nama Anggota Kelompok</h2>
-    <li>Victor Purba</li>
-    <li>Daniel Indra Octo Pardomuan</li>
-    <li>Pandu Lesmana</li>
-    <li>Sebastian Sembiring</li>
+    <li>Victor Purba	: 161112278</li>
+    <li>Daniel Indra Octo Pardomuan		: 161112219</li>
+    <li>Pandu Lesmana		: 161111574</li>
+    <li>Sebastian Sembiring		: 161112154</li>
   </section>
 
   <section>
