--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   </section>
 
 <section>
-    <h2>Nama Anggota Kelompok</h2>
+    <h2><font color="blue">Nama Anggota Kelompok</font></h2>
     <li>Victor Purba	: 161112278</li>
     <li>Daniel Indra Octo Pardomuan		: 161112219</li>
     <li>Pandu Lesmana		: 161111574</li>
