--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,14 @@
   </section>
 
   <section>
-    <h2>Images</h2>
-    <img src="images/bespoke-logo.jpg">
+    <h2>Samsung Family Hub 3.0 versi 2018</h2>
+    <img src="images/Samsung-Family-review.jpg">
   </section>
 
   <section>
-    <h2>Keyboard Interaction</h2>
-    <h3>Powered by <a href="https://github.com/bespokejs/bespoke-keys">bespoke-keys</a></h3>
+    <p>Pada awal Desember 2018, Samsung mengeluarkan produk terbarunya yaitu sebuah kulkas yang memiliki kecanggihan luar biasa. Kulkas tersebut dibuat dengan memanfaatkan teknologi artificial intelligence (AI) dan internet of things (IoT) yang saat ini marak digunakan oleh perusahaan-perusahaan teknologi di dunia.</p>
+  	<p>Produk terbaru itu diberi nama Samsung Family Hub 3.0 versi 2018, karena tahun sebelumnya Samsung juga sudah mengeluarkan produk yang sama.</p>
+  	<p>Lemari es tersebut tercipta melalui hasil kerjasama antara Samsung dengan Woolworths. Family Hub 3.0 merupakan salah satu perangkat smarthome yang sangat cocok digunakan bagi keluarga besar dengan dapur sempit dan tidak mempunyai waktu untuk berbelanja ke supermarket.</p>
   </section>
 
   <section>
