--- a/src/index.html
+++ b/src/index.html
@@ -32,51 +32,60 @@
   	<p>Lemari es tersebut tercipta melalui hasil kerjasama antara Samsung dengan Woolworths. Family Hub 3.0 merupakan salah satu perangkat smarthome yang sangat cocok digunakan bagi keluarga besar dengan dapur sempit dan tidak mempunyai waktu untuk berbelanja ke supermarket.</p>
   </section>
 
-  <section>
-    <h2>Touch Interaction</h2>
-    <h3>Powered by <a href="https://github.com/bespokejs/bespoke-touch">bespoke-touch</a></h3>
+ <section>
+    <h2>Kelebihan</h2>
+    <h2>Samsung Family Hub 3.0 versi 2018</h2>
   </section>
 
   <section>
-    <h2>Responsive Slides</h2>
-    <h3>Powered by <a href="https://github.com/bespokejs/bespoke-scale">bespoke-scale</a></h3>
+  	<h2>Menampilkan resep makanan</h2>
+  <img src="images/kelebihan1.jpg" width="250px" height="200px">
+   <p><p text align="justify">Lemari es canggih tersebut dilengkapi 4 buah pintu, satu pintunya terdapat sebuah layar sentuh seluas 21.5 inci yang dapat digunakan untuk menulis daftar belanjaan dan juga mampu menampilkan lebih dari 2000 resep makanan.
+
+Layar tersebut juga mengkloning (mirroring) atau menampilkan screen pada smartphone dan TV yang bermerk Samsung.
+
+Setiap resep yang terdapat pada layar sentuh kulkas bisa melihat detail bahan-bahanya. Jika barangnya tidak tersedia di lemari maka Samsung Family Hub akan menambahkannya secara otomatis ke daftar belanja.
+
+Selain itu penggunanya juga bisa menghapus bahan-bahan yang tidak diperlukan dari resep.</p></p>
+   
   </section>
 
   <section>
-    <h2>Bullet List</h2>
-    <h3>Powered by <a href="https://github.com/bespokejs/bespoke-bullets">bespoke-bullets</a></h3>
-    <ul class="build build-items">
-      <li>Bullet 1</li>
-      <li>Bullet 2</li>
-      <li>Bullet 3</li>
-    </ul>
+    <h2>Sebagai penghubung dengan perangkat lain</h2>
+    <img src="images/kelebihan2.jpg" width="250px" height="200px">
+    <p><p text align="justify">Fungsi lain dari kulkas tersebut yaitu menjadi pusat komunikasi keluarga atau servernya rumah. Karena lemari es ini sudah didukung teknologi Bixby yang bekerja menggunakan teknologi AI sehingga membuat kulkas ini bisa diperintah melalui suara.
+
+Adapun perintah yang bisa pengguna lakukannya yaitu mengecek stok dan masa kadarluasa makanan yang ada di dalam lemari dan lain sebagainya.</p></p>
   </section>
 
   <section>
-    <iframe width="640" height="360" src="https://www.youtube.com/embed/AV3kYPutYfs?rel=0&amp;showinfo=0&amp;controls=0&amp;enablejsapi=1&amp;loop=1&amp;playlist=AV3kYPutYfs" frameborder="0" allowfullscreen data-volume="0"></iframe>
+    <h2>Bisa diperintah menggunakan suara</h2>
+    <img src="images/kelebihan3.png" width="250px" height="200px">
+    <p><p text align="justify">Teknologi Bixby merupakan asisten virtual yang diperkenalkan Samsung. Aplikasi pertama kali diterapkan secara default di Samsung Galaxy S8 dan Galaxy S8 Plus.
+
+Bixby memiliki fungsi menampilkan semua yang diperintah oleh pemiliknya melalui layar smartphone. Bahkan aplikasi tesebut disebut sebagai inovasi terbaru untuk melakukan pencarian dan berinteraksi denga smartphone.
+
+Perintah tersebut bisa dilakukan melalui gambar, teks, hingga suara.</p></p>
   </section>
 
   <section>
-    <h2>Syntax Highlighting</h2>
-    <h3>Powered by <a href="https://twitter.com/LeaVerou">Lea Verou</a>'s <a href="https://github.com/PrismJS/prism">Prism</a></h3>
-    <pre><code class="language-javascript">
-(function() {
-  function hanoi(n, a, b, c) {
-    return n ? hanoi(n - 1, a, c, b)
-        .concat([[a, b]])
-        .concat(hanoi(n - 1, c, b, a)) : [];
-  }
-  return hanoi(3, 'left', 'right', 'mid')
-    .map(function(d) {
-      return d[0] + ' -&gt; ' + d[1];
-    });
-})();</code></pre>
+    <h2>Sebagai monitor CCTV</h2>
+    <img src="images/kelebihan4.png" width="250px" height="200px">
+    <p><p text align="justify">bisa digunakan oleh ibu di rumah untuk memantau anak-anaknya dengan memanfaatkan monitor pada pintu kulkas.
+
+Terdapat kamera yang bisa terhubung dengan CCTV yang terletak di bagian setiap ruangan rumah. Sepertinya kulkasi ini sangat cocok bagi ibu yang memiliki anak-anak yang nakal jika ia lagi di dapur.</p></p>
   </section>
 
-  <section data-bespoke-hash="named-route">
-    <h2>Named Route</h2>
-    <h3>Powered by <a href="https://github.com/bespokejs/bespoke-hash">bespoke-hash</a></h3>
-    <p>Look up! This route has been named with a <em>data-bespoke-hash</em> attribute.</p>
+  <section>
+    <h2>Menampilkan jadwal aktivitas sehari-hari</h2>
+    <p><p text align="justify">Lamari es ini juga mampu menampilkan jadwal pelajaran anak, jadwal rapat, catatan harian dan lain sebagainya.</p></p>
+  </section>
+
+  <section>
+    <h2>Bisa memutar music</h2>
+    <p><p text align="justify">Bagi anda yang suka hobi mendengar musik maka tenang saja, Family Hub 3.0 bisa memutar lagu-lagi favorit koleksi Spootify.</p></p>
+
+Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan suara jernih dan bass “nendang”</p>
   </section>
 
   <section>
