Menambahkan Fitur Utama

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,34 @@
   </section>
 
  <section>
+    <h2>Fitur Utama</h2>
+    <h2>Samsung Family Hub 3.0 versi 2018</h2>
+  </section>
+
+ <section>
+    <h2>1. Family Board</h2>
+    <p>Family Board sendiri merupakan sebuah layar komunal yang memungkinkan
+anggota keluarga pemilik Family Hub bisa saling berinteraksi dengan cara
+yang dipersonalisasi. Bisa dibilang, Family Hub bisa membantu membina
+hubungan keluarga lebih baik dalam hal pengelolaan makanan di dalam
+lemari es.</p>
+<p>Berkat teknologi tersebut, anggota
+keluarga pemilik Family Hub bisa menggunakan lemari es tersebut menjadi
+lebih pintar, hands-free dan lebih personal.</p>
+  </section>
+
+<section>
+    <h2>2. Bixby</h2>
+    <p>Bixby Merupakan sebuah teknologi voice assistant yang menawarkan banyak layanan karena dapat memungkinkan pengguna untuk mengendalikan dan memantau perangkat dan layanan IoT di dalam rumah secara mulus dari dapur, cukup dengan perintah suara.</p>
+
+<p>Pengguna juga dapat dapat mencari tiket pesawat, memesan taksi
+online dan mengatur oven hanya dengan berbicara ke Family Hub.</p>
+
+<p>Melalui teknologi pengenalan suara Bixby, suara setiap anggota keluarga dapat dibedakan sehingga setiap orang memperoleh informasi yang disesuaikan dengan kebutuhan masing-masing.
+</p>
+  </section>
+
+ <section>
     <h2>Kelebihan</h2>
     <h2>Samsung Family Hub 3.0 versi 2018</h2>
   </section>
