--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <img src="images/Samsung-Family-review.jpg">
   </section>
 
+
   <section>
     <p>Pada awal Desember 2018, Samsung mengeluarkan produk terbarunya yaitu sebuah kulkas yang memiliki kecanggihan luar biasa. Kulkas tersebut dibuat dengan memanfaatkan teknologi artificial intelligence (AI) dan internet of things (IoT) yang saat ini marak digunakan oleh perusahaan-perusahaan teknologi di dunia.</p>
   	<p>Produk terbaru itu diberi nama Samsung Family Hub 3.0 versi 2018, karena tahun sebelumnya Samsung juga sudah mengeluarkan produk yang sama.</p>
@@ -117,16 +118,11 @@ Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan s
   </section>
 
   <section>
-    <h2>Just the beginning…</h2><br>
-    <ul class="build build-items">
-      <li>Edit HTML markup in <em class="path">src/index.html</em></li>
-      <li>Edit <a href="http://stylus-lang.com">Stylus</a> styles in <em class="path">src/styles/user.styl</em></li>
-      <li>Edit JavaScript in <em class="path">src/scripts/main.js</em></li>
-    </ul>
-    <br>
-    <ul class="build">
-      <li><strong>Enjoy! :)</strong><a href="https://twitter.com/markdalgleish"> -@markdalgleish</a></li>
-    </ul>
+  	<h2>Video Kulkas Samsung Family HubTM</h2>
+  	<video width="500" controls>
+  		<source src="1.mp4" type="video/mp4">
+  	</video>		
+   
   </section>
 </article>
 
