Menambahkan video lagi

--- a/src/index.html
+++ b/src/index.html
@@ -119,10 +119,9 @@ Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan s
 
   <section>
   	<h2>Video Kulkas Samsung Family HubTM</h2>
-  	<video width="500" controls>
-  		<source src="1.mp4" type="video/mp4">
-  	</video>		
-   
+	<video src="https://www.youtube.com/watch?v=6jcclMDjb_8">		
+ 	</video>
+
   </section>
 </article>
 
