Menambahkan Video yg benarrrr

--- a/src/index.html
+++ b/src/index.html
@@ -119,8 +119,7 @@ Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan s
 
   <section>
   	<h2>Video Kulkas Samsung Family HubTM</h2>
-	<video src="https://www.youtube.com/watch?v=6jcclMDjb_8">		
- 	</video>
+	<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" src="https://www.youtube.com/embed/6jcclMDjb_8?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/en">youtubeembedcode en</a></small></div><div><small><a href="http://add-link-exchange.com">www://add-link-exchange.com</a></small></div></iframe>
 
   </section>
 </article>
