--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <li>Daniel Indra Octo Pardomuan		: 161112219</li>
     <li>Pandu Lesmana		: 161111574</li>
     <li>Sebastian Sembiring		: 161112154</li>
+    <li>Soumi Ramadhan Simamora   : 161112570</li>
   </section>
 
   <section>
@@ -122,6 +123,7 @@ Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan s
 	<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" src="https://www.youtube.com/embed/6jcclMDjb_8?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/en">youtubeembedcode en</a></small></div><div><small><a href="http://add-link-exchange.com">www://add-link-exchange.com</a></small></div></iframe>
 
   </section>
+
 </article>
 
 <script src="build/build.js"></script>
