Menambahkan Spesifikasi produk

--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,18 @@ Terdapat kamera yang bisa terhubung dengan CCTV yang terletak di bagian setiap r
 
 Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan suara jernih dan bass “nendang”</p>
   </section>
+  <section>
+    <h2> Spesifikasi Produk</h2>
+    <ul>
+<li>Layar sentuh berukuran 21,5 inc dengan resolusi full HD</li>
+<li>3 Kamera berkualitas tinggi</li>
+<li>Bisa mengontrol menggunakan aplikasi samsung smart home</li>
+<li>speaker dari pabrikan AKG</li>
+<li>fasilitas screen mirroring dengan Samsung Tizen TV</li>
+<li>sistem pendingin Triple and Metal Cooling system</li>
+
+    </ul>
+  </section>
 
   <section>
   	<h2>Video Kulkas Samsung Family HubTM</h2>
