Melengkapi Fitur Utama

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   </section>
 
   <section>
-    <h2>Samsung Family Hub 3.0 versi 2018</h2>
+    <h2>Samsung Family Hub 3.0</h2>
     <img src="images/Samsung-Family-review.jpg">
   </section>
 
@@ -34,37 +34,64 @@
   	<p>Lemari es tersebut tercipta melalui hasil kerjasama antara Samsung dengan Woolworths. Family Hub 3.0 merupakan salah satu perangkat smarthome yang sangat cocok digunakan bagi keluarga besar dengan dapur sempit dan tidak mempunyai waktu untuk berbelanja ke supermarket.</p>
   </section>
 
- <section>
-    <h2>Fitur Utama</h2>
-    <h2>Samsung Family Hub 3.0 versi 2018</h2>
+<section>
+  	<h2>Overview Kulkas Samsung Family HubTM</h2>
+	<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" src="https://www.youtube.com/embed/6jcclMDjb_8?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/en">youtubeembedcode en</a></small></div><div><small><a href="http://add-link-exchange.com">www://add-link-exchange.com</a></small></div></iframe>
+
   </section>
 
  <section>
+    <h2>Fitur Utama</h2>
+    <h2>Samsung Family Hub 3.0</h2>
+  </section>
+
+ <section>
+    <img src="images/Dashboard.jpg" width="250px" height="200px">
     <h2>1. Family Board</h2>
     <p>Family Board sendiri merupakan sebuah layar komunal yang memungkinkan
 anggota keluarga pemilik Family Hub bisa saling berinteraksi dengan cara
-yang dipersonalisasi. Bisa dibilang, Family Hub bisa membantu membina
-hubungan keluarga lebih baik dalam hal pengelolaan makanan di dalam
-lemari es.</p>
+yang dipersonalisasi.</p>
 <p>Berkat teknologi tersebut, anggota
 keluarga pemilik Family Hub bisa menggunakan lemari es tersebut menjadi
 lebih pintar, hands-free dan lebih personal.</p>
   </section>
 
 <section>
+	<img src="images/bixby.png" width="250px" height="200px">
     <h2>2. Bixby</h2>
     <p>Bixby Merupakan sebuah teknologi voice assistant yang menawarkan banyak layanan karena dapat memungkinkan pengguna untuk mengendalikan dan memantau perangkat dan layanan IoT di dalam rumah secara mulus dari dapur, cukup dengan perintah suara.</p>
 
 <p>Pengguna juga dapat dapat mencari tiket pesawat, memesan taksi
 online dan mengatur oven hanya dengan berbicara ke Family Hub.</p>
-
-<p>Melalui teknologi pengenalan suara Bixby, suara setiap anggota keluarga dapat dibedakan sehingga setiap orang memperoleh informasi yang disesuaikan dengan kebutuhan masing-masing.
-</p>
   </section>
+
+<section>
+	<img src="images/morning-brief.jpg" width="250px" height="200px">
+	<h2>3. Morning Brief</h2>
+	<p>Menyampaikan semua hal penting setiap hari. Termasuk informasi cuaca, tetapi juga berita-berita yang menjadi headline.</p>
+</section>
+
+<section>
+	<img src="images/smart-view.png" width="250px" height="200px">
+	<h2>4. Smart View</h2>
+	<p>Lewat fitur ini, multitasking menjadi mudah karena
+pengguna dapat menampilkan aplikasi pihak ketiga di layar Family Hub
+dari ponsel Galaxy, tanpa perlu menjalankan aplikasi Smart View di
+lemari es.</p>
+</section>
+
+<section>
+	<img src="images/appstore.jpg" width="250px" height="200px">
+	<h2>5. AppStore</h2>
+	<p>Tak hanya sampai di situ, Bixby terbaru yang ditanam ke dalam Family Hub
+tidak hanya memungkinkan pengguna untuk menjawab panggilan secara
+hands-free. Tetapi, mereka juga dapat menelusuri jutaan aplikasi pihak
+ketiga yang tersedia bagi keperluan dapur.</p>
+</section>
 
  <section>
     <h2>Kelebihan</h2>
-    <h2>Samsung Family Hub 3.0 versi 2018</h2>
+    <h2>Samsung Family Hub 3.0</h2>
   </section>
 
   <section>
@@ -108,17 +135,19 @@ Terdapat kamera yang bisa terhubung dengan CCTV yang terletak di bagian setiap r
 
   <section>
     <h2>Menampilkan jadwal aktivitas sehari-hari</h2>
+    <img src="images/todo.jpg" width="250px" height="200px">
     <p><p text align="justify">Lamari es ini juga mampu menampilkan jadwal pelajaran anak, jadwal rapat, catatan harian dan lain sebagainya.</p></p>
   </section>
 
   <section>
     <h2>Bisa memutar music</h2>
+    <img src="images/music.jpg" width="250px" height="200px">
     <p><p text align="justify">Bagi anda yang suka hobi mendengar musik maka tenang saja, Family Hub 3.0 bisa memutar lagu-lagi favorit koleksi Spootify.</p></p>
 
 Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan suara jernih dan bass “nendang”</p>
   </section>
   <section>
-    <h2> Spesifikasi Produk</h2>
+    <h2> Spesifikasi Samsung Family Hub 3.0</h2>
     <ul>
 <li>Layar sentuh berukuran 21,5 inc dengan resolusi full HD</li>
 <li>3 Kamera berkualitas tinggi</li>
@@ -128,12 +157,6 @@ Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan s
 <li>sistem pendingin Triple and Metal Cooling system</li>
 
     </ul>
-  </section>
-
-  <section>
-  	<h2>Video Kulkas Samsung Family HubTM</h2>
-	<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" src="https://www.youtube.com/embed/6jcclMDjb_8?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/en">youtubeembedcode en</a></small></div><div><small><a href="http://add-link-exchange.com">www://add-link-exchange.com</a></small></div></iframe>
-
   </section>
 
 </article>
