--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
+  <style type="text/css">
+    
+  	section { background-image:url(images/background.gif); background-size:cover
+
+  	}
+    p{
+      font-family: serif;
+      line-height: 1.75em;
+      font-size: 18px;
+    }
+    img{border: 5px solid #ccc;padding:5px;}
+
+    body{color: white;}
+
+  </style>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -95,8 +110,8 @@ ketiga yang tersedia bagi keperluan dapur.</p>
   </section>
 
   <section>
+  	  <img src="images/kelebihan1.jpg" width="250px" height="200px">
   	<h2>Menampilkan resep makanan</h2>
-  <img src="images/kelebihan1.jpg" width="250px" height="200px">
    <p><p text align="justify">Lemari es canggih tersebut dilengkapi 4 buah pintu, satu pintunya terdapat sebuah layar sentuh seluas 21.5 inci yang dapat digunakan untuk menulis daftar belanjaan dan juga mampu menampilkan lebih dari 2000 resep makanan.
 
 Layar tersebut juga mengkloning (mirroring) atau menampilkan screen pada smartphone dan TV yang bermerk Samsung.
@@ -108,16 +123,16 @@ Selain itu penggunanya juga bisa menghapus bahan-bahan yang tidak diperlukan dar
   </section>
 
   <section>
+  	<img src="images/kelebihan2.jpg" width="250px" height="200px">
     <h2>Sebagai penghubung dengan perangkat lain</h2>
-    <img src="images/kelebihan2.jpg" width="250px" height="200px">
     <p><p text align="justify">Fungsi lain dari kulkas tersebut yaitu menjadi pusat komunikasi keluarga atau servernya rumah. Karena lemari es ini sudah didukung teknologi Bixby yang bekerja menggunakan teknologi AI sehingga membuat kulkas ini bisa diperintah melalui suara.
 
 Adapun perintah yang bisa pengguna lakukannya yaitu mengecek stok dan masa kadarluasa makanan yang ada di dalam lemari dan lain sebagainya.</p></p>
   </section>
 
   <section>
-    <h2>Bisa diperintah menggunakan suara</h2>
     <img src="images/kelebihan3.png" width="250px" height="200px">
+    <h2>Bisa diperintah menggunakan suara</h2>
     <p><p text align="justify">Teknologi Bixby merupakan asisten virtual yang diperkenalkan Samsung. Aplikasi pertama kali diterapkan secara default di Samsung Galaxy S8 dan Galaxy S8 Plus.
 
 Bixby memiliki fungsi menampilkan semua yang diperintah oleh pemiliknya melalui layar smartphone. Bahkan aplikasi tesebut disebut sebagai inovasi terbaru untuk melakukan pencarian dan berinteraksi denga smartphone.
@@ -126,25 +141,23 @@ Perintah tersebut bisa dilakukan melalui gambar, teks, hingga suara.</p></p>
   </section>
 
   <section>
+  	<img src="images/kelebihan4.png" width="250px" height="200px">
     <h2>Sebagai monitor CCTV</h2>
-    <img src="images/kelebihan4.png" width="250px" height="200px">
     <p><p text align="justify">bisa digunakan oleh ibu di rumah untuk memantau anak-anaknya dengan memanfaatkan monitor pada pintu kulkas.
 
 Terdapat kamera yang bisa terhubung dengan CCTV yang terletak di bagian setiap ruangan rumah. Sepertinya kulkasi ini sangat cocok bagi ibu yang memiliki anak-anak yang nakal jika ia lagi di dapur.</p></p>
   </section>
 
   <section>
+  	<img src="images/todo.jpg" width="250px" height="200px">
     <h2>Menampilkan jadwal aktivitas sehari-hari</h2>
-    <img src="images/todo.jpg" width="250px" height="200px">
     <p><p text align="justify">Lamari es ini juga mampu menampilkan jadwal pelajaran anak, jadwal rapat, catatan harian dan lain sebagainya.</p></p>
   </section>
 
   <section>
+  	<img src="images/music.jpg" width="250px" height="200px">
     <h2>Bisa memutar music</h2>
-    <img src="images/music.jpg" width="250px" height="200px">
-    <p><p text align="justify">Bagi anda yang suka hobi mendengar musik maka tenang saja, Family Hub 3.0 bisa memutar lagu-lagi favorit koleksi Spootify.</p></p>
-
-Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan suara jernih dan bass “nendang”</p>
+    <p><p text align="justify">Bagi anda yang suka hobi mendengar musik maka tenang saja, Family Hub 3.0 bisa memutar lagu-lagi favorit koleksi Spootify. Untuk mendukung kinerjanya maka disematkan speaker AKG yang dapat menghasilkan suara jernih dan bass “nendang”</p></p>
   </section>
   <section>
     <h2> Spesifikasi Samsung Family Hub 3.0</h2>
