--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
     }
     img{border: 5px solid #ccc;padding:5px;}
 
-    body{color: white;}
+    body{color: white;
+    	background-image:url(images/background.gif); background-size:cover
+    }
 
   </style>
 <head>
@@ -44,14 +46,14 @@
 
 
   <section>
-    <p>Pada awal Desember 2018, Samsung mengeluarkan produk terbarunya yaitu sebuah kulkas yang memiliki kecanggihan luar biasa. Kulkas tersebut dibuat dengan memanfaatkan teknologi artificial intelligence (AI) dan internet of things (IoT) yang saat ini marak digunakan oleh perusahaan-perusahaan teknologi di dunia.</p>
-  	<p>Produk terbaru itu diberi nama Samsung Family Hub 3.0 versi 2018, karena tahun sebelumnya Samsung juga sudah mengeluarkan produk yang sama.</p>
-  	<p>Lemari es tersebut tercipta melalui hasil kerjasama antara Samsung dengan Woolworths. Family Hub 3.0 merupakan salah satu perangkat smarthome yang sangat cocok digunakan bagi keluarga besar dengan dapur sempit dan tidak mempunyai waktu untuk berbelanja ke supermarket.</p>
+    <p><p text align="justify">Pada awal Desember 2018, Samsung mengeluarkan produk terbarunya yaitu sebuah kulkas yang memiliki kecanggihan luar biasa. Kulkas tersebut dibuat dengan memanfaatkan teknologi artificial intelligence (AI) dan internet of things (IoT) yang saat ini marak digunakan oleh perusahaan-perusahaan teknologi di dunia.</p></p>
+  	<p><p text align="justify">Produk terbaru itu diberi nama Samsung Family Hub 3.0 versi 2018, karena tahun sebelumnya Samsung juga sudah mengeluarkan produk yang sama.</p></p>
+  	<p><p text align="justify">Lemari es tersebut tercipta melalui hasil kerjasama antara Samsung dengan Woolworths. Family Hub 3.0 merupakan salah satu perangkat smarthome yang sangat cocok digunakan bagi keluarga besar dengan dapur sempit dan tidak mempunyai waktu untuk berbelanja ke supermarket.</p></p>
   </section>
 
 <section>
   	<h2>Overview Kulkas Samsung Family HubTM</h2>
-	<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="788.54" height="443" type="text/html" src="https://www.youtube.com/embed/6jcclMDjb_8?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/en">youtubeembedcode en</a></small></div><div><small><a href="http://add-link-exchange.com">www://add-link-exchange.com</a></small></div></iframe>
+	<iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="500" height="350" type="text/html" src="https://www.youtube.com/embed/6jcclMDjb_8?autoplay=0&fs=0&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"><div><small><a href="https://youtubeembedcode.com/en">youtubeembedcode en</a></small></div><div><small><a href="http://add-link-exchange.com">www://add-link-exchange.com</a></small></div></iframe>
 
   </section>
 
@@ -63,45 +65,45 @@
  <section>
     <img src="images/Dashboard.jpg" width="250px" height="200px">
     <h2>1. Family Board</h2>
-    <p>Family Board sendiri merupakan sebuah layar komunal yang memungkinkan
+    <p><p text align="justify">Family Board sendiri merupakan sebuah layar komunal yang memungkinkan
 anggota keluarga pemilik Family Hub bisa saling berinteraksi dengan cara
-yang dipersonalisasi.</p>
-<p>Berkat teknologi tersebut, anggota
+yang dipersonalisasi.</p></p>
+<p><p text align="justify">Berkat teknologi tersebut, anggota
 keluarga pemilik Family Hub bisa menggunakan lemari es tersebut menjadi
-lebih pintar, hands-free dan lebih personal.</p>
+lebih pintar, hands-free dan lebih personal.</p></p>
   </section>
 
 <section>
 	<img src="images/bixby.png" width="250px" height="200px">
     <h2>2. Bixby</h2>
-    <p>Bixby Merupakan sebuah teknologi voice assistant yang menawarkan banyak layanan karena dapat memungkinkan pengguna untuk mengendalikan dan memantau perangkat dan layanan IoT di dalam rumah secara mulus dari dapur, cukup dengan perintah suara.</p>
+    <p><p text align="justify">Bixby Merupakan sebuah teknologi voice assistant yang menawarkan banyak layanan karena dapat memungkinkan pengguna untuk mengendalikan dan memantau perangkat dan layanan IoT di dalam rumah secara mulus dari dapur, cukup dengan perintah suara.</p></p>
 
-<p>Pengguna juga dapat dapat mencari tiket pesawat, memesan taksi
-online dan mengatur oven hanya dengan berbicara ke Family Hub.</p>
+<p><p text align="justify">Pengguna juga dapat dapat mencari tiket pesawat, memesan taksi
+online dan mengatur oven hanya dengan berbicara ke Family Hub.</p></p>
   </section>
 
 <section>
 	<img src="images/morning-brief.jpg" width="250px" height="200px">
 	<h2>3. Morning Brief</h2>
-	<p>Menyampaikan semua hal penting setiap hari. Termasuk informasi cuaca, tetapi juga berita-berita yang menjadi headline.</p>
+	<p><p text align="justify">Menyampaikan semua hal penting setiap hari. Termasuk informasi cuaca, tetapi juga berita-berita yang menjadi headline.</p></p>
 </section>
 
 <section>
 	<img src="images/smart-view.png" width="250px" height="200px">
 	<h2>4. Smart View</h2>
-	<p>Lewat fitur ini, multitasking menjadi mudah karena
+	<p><p text align="justify">Lewat fitur ini, multitasking menjadi mudah karena
 pengguna dapat menampilkan aplikasi pihak ketiga di layar Family Hub
 dari ponsel Galaxy, tanpa perlu menjalankan aplikasi Smart View di
-lemari es.</p>
+lemari es.</p></p>
 </section>
 
 <section>
 	<img src="images/appstore.jpg" width="250px" height="200px">
 	<h2>5. AppStore</h2>
-	<p>Tak hanya sampai di situ, Bixby terbaru yang ditanam ke dalam Family Hub
+	<p><p text align="justify">Tak hanya sampai di situ, Bixby terbaru yang ditanam ke dalam Family Hub
 tidak hanya memungkinkan pengguna untuk menjawab panggilan secara
 hands-free. Tetapi, mereka juga dapat menelusuri jutaan aplikasi pihak
-ketiga yang tersedia bagi keperluan dapur.</p>
+ketiga yang tersedia bagi keperluan dapur.</p></p>
 </section>
 
  <section>
@@ -110,6 +112,7 @@ ketiga yang tersedia bagi keperluan dapur.</p>
   </section>
 
   <section>
+
   	  <img src="images/kelebihan1.jpg" width="250px" height="200px">
   	<h2>Menampilkan resep makanan</h2>
    <p><p text align="justify">Lemari es canggih tersebut dilengkapi 4 buah pintu, satu pintunya terdapat sebuah layar sentuh seluas 21.5 inci yang dapat digunakan untuk menulis daftar belanjaan dan juga mampu menampilkan lebih dari 2000 resep makanan.
@@ -135,7 +138,7 @@ Adapun perintah yang bisa pengguna lakukannya yaitu mengecek stok dan masa kadar
     <h2>Bisa diperintah menggunakan suara</h2>
     <p><p text align="justify">Teknologi Bixby merupakan asisten virtual yang diperkenalkan Samsung. Aplikasi pertama kali diterapkan secara default di Samsung Galaxy S8 dan Galaxy S8 Plus.
 
-Bixby memiliki fungsi menampilkan semua yang diperintah oleh pemiliknya melalui layar smartphone. Bahkan aplikasi tesebut disebut sebagai inovasi terbaru untuk melakukan pencarian dan berinteraksi denga smartphone.
+Bixby memiliki fungsi menampilkan semua yang diperintah oleh pemiliknya melalui layar smartphone. Bahkan aplikasi tesebut disebut sebagai inovasi terbaru untuk melakukan pencarian dan berinteraksi dengan smartphone.
 
 Perintah tersebut bisa dilakukan melalui gambar, teks, hingga suara.</p></p>
   </section>
@@ -143,9 +146,9 @@ Perintah tersebut bisa dilakukan melalui gambar, teks, hingga suara.</p></p>
   <section>
   	<img src="images/kelebihan4.png" width="250px" height="200px">
     <h2>Sebagai monitor CCTV</h2>
-    <p><p text align="justify">bisa digunakan oleh ibu di rumah untuk memantau anak-anaknya dengan memanfaatkan monitor pada pintu kulkas.
+    <p><p text align="justify">Bisa digunakan oleh ibu di rumah untuk memantau anak-anaknya dengan memanfaatkan monitor pada pintu kulkas.
 
-Terdapat kamera yang bisa terhubung dengan CCTV yang terletak di bagian setiap ruangan rumah. Sepertinya kulkasi ini sangat cocok bagi ibu yang memiliki anak-anak yang nakal jika ia lagi di dapur.</p></p>
+Terdapat kamera yang bisa terhubung dengan CCTV yang terletak di bagian setiap ruangan rumah. Sepertinya kulkas ini sangat cocok bagi ibu yang memiliki anak-anak yang nakal jika ia lagi di dapur.</p></p>
   </section>
 
   <section>
